# variable-elimination

./: .gitignore  Makefile  README.md  header.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
var_elim/: cyipopt.py  distill.py  elimination_callbacks.py  var_elem_distill.py  var_elem_distillation.py  var_elim_distill.py  var_elim_distill_framework.py
var_elim/algorithms/: ampl_heuristic.py  elimination_workflow.py  expr.py  replace.py  replace_expr_mwe.py  validate.py
var_elim/data/: acceptable_cute_problems.txt  data_pandas.xlsx  data_randomized.xlsx  expt_description.txt
var_elim/figures/: README.md  config.py  dm_model.py  generate_bt_figure.py  generate_dm_images.py  graph_and_matrix.py  graph_and_matrix_with_matching.py  match_elim_example.py  singular_solid_prop.py
var_elim/heuristics/: ampl_heuristic.py  matching.py  min_degree_heuristic.py  trivial_elimination.py
var_elim/minlp_lib/: acceptable_module_names.txt  extract_problems_from_minlplib.py  run_all_heuristics.py
var_elim/mip_compare/: mip_comparison.py  mip_comparison_cheme_problems.py
var_elim/mip_formulations/: mip_elim.py  mip_elim2.py
var_elim/models/: testproblems.py
var_elim/plotting/: plotting_helper.py  plotting_randomized.py
var_elim/results/: README.md
var_elim/scripts/: README.md  analyze_paramsweep_time.py  analyze_solvetime.py  analyze_structure.py  collect_results.py  collect_sweep_results.py  config.py  makefile  matching_btf.py  plot_dae_order.py  plot_sparsity.py  plot_structure_bargraphs.py  plot_sweep_results.py  plot_time_trends.py  (+9 more)
(+271 files in other folders)
