[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "variable-elimination"
version = "0.1.0"
description = "Algorithms and test problems for variable elimination in nonlinear optimization problems."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Robert Parker and Sakshi Naik"},
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["var_elim", "var_elim.*"]

[tool.setuptools.package-data]
"var_elim.models.distillation" = ["*.dat"]
"var_elim.models.opf" = ["*.m"]
